# Optimize-GEMM-on-Nvidia-Amper-GPU

./: CMakeLists.txt  cuda-main.cu
include/: cuda_helper.h  lanch_kernel.cuh  sgemm_v1.cuh  sgemm_v2.cuh  sgemm_v3.cuh  sgemm_v4.cuh
src/: cuda-main.cu  lanch_kernel.cu  sgemm_v1.cu
